v2.1.4/_sources/plugins/device_configs_backup_workflow_manager_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.device_configs_backup_workflow_manager module -- Device Configs Backup module for taking configuration backups of reachable devices in the Cisco Catalyst Center.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.1.4).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.device_configs_backup_workflow_manager`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.14.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation related to taking the backup of running config, static config and vlan.dat.bat


.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 2.3.7.9
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_api_port:

      .. rst-class:: ansible-option-title

      **_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the port number associated with the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"443"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_debug:

      .. rst-class:: ansible-option-title

      **_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Indicates whether debugging is enabled in the Cisco Catalyst Center SDK.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_host"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_host:

      .. rst-class:: ansible-option-title

      **_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The hostname of the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_password"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_password:

      .. rst-class:: ansible-option-title

      **_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The password for authentication at the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_username:
      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-user:

      .. rst-class:: ansible-option-title

      **_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The username for authentication at the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_verify:

      .. rst-class:: ansible-option-title

      **_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_version"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-_version:

      .. rst-class:: ansible-option-title

      **_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the version of the Cisco Catalyst Center that the SDK should use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.2.3.3"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_task_timeout"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-catalystcenter_api_task_timeout:

      .. rst-class:: ansible-option-title

      **catalystcenter_api_task_timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_api_task_timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Defines the timeout in seconds for API calls to retrieve task details. If the task details are not received within this period, the process will end, and a timeout notification will be logged.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`1200`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_task_poll_interval"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-catalystcenter_task_poll_interval:

      .. rst-class:: ansible-option-title

      **catalystcenter_task_poll_interval**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_task_poll_interval" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the interval in seconds between successive calls to the API to retrieve task details.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`2`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config:

      .. rst-class:: ansible-option-title

      **config**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      List of details of the devices for which configuration backups need to be taken.

      At least one parameter from the suboptions must be provided in the config.

      When providing multiple parameters at once (excluding "site\_list"), all the filters will be applied together in an AND operation. This means that only the devices matching all the specified criteria will be included in the configuration backup operation. For example, if both \`hostname\` and \`device\_type\` are provided, only devices matching both the specified hostname and device type will be selected.

      Note - Once all devices matching the parameters are retrieved, any device that is not reachable or is an Access Point (AP) will be skipped.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/collection_status"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/collection_status:

      .. rst-class:: ansible-option-title

      **collection_status**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/collection_status" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the list of collection status of the device(s) as displayed in the inventory GUI of the Cisco Catalyst Center.

      For example - ["Managed"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/family"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/family:

      .. rst-class:: ansible-option-title

      **family**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/family" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies list of families for which device configuration backups need to be taken.

      For example - ["Switches and Hubs", "Routers"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/file_password"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/file_password:

      .. rst-class:: ansible-option-title

      **file_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/file_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Optional file password for zipping and unzipping the config file.

      Password must meet the following criteria - - Minimum password length is 8 - It should contain atleast one lower case letter, one uppercase letter, - one digit - one special characters from -=\\\\\\\\\\\\\\\\;,./~!@$%^&\*()\_+{}[]|:?"


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/file_path"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/file_path:

      .. rst-class:: ansible-option-title

      **file_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/file_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The location or directory where the configuration backups need to be exported on the local system.

      If the "file\_path" is not provided, the backup file(s) will be stored in a directory named "tmp" in the same directory as the playbook.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"tmp"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/hostname_list"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/hostname_list:

      .. rst-class:: ansible-option-title

      **hostname_list**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/hostname_list" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of hostnames of the devices for which a configuration backup is to be taken.

      The hostnames must be identical to those displayed under the inventory section in the Cisco Catalyst Center GUI.

      For example - ["DC-T-9300.cisco.local", "NY-BN-9300.cisco.local"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/ip_address_list"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/ip_address_list:

      .. rst-class:: ansible-option-title

      **ip_address_list**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/ip_address_list" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of IP addresses of the devices for which configuration backups need to be taken.

      The IP addresses should match those displayed in the inventory GUI of the Cisco Catalyst Center, specifically the management IP addresses of the devices.

      For example - ["204.1.2.2", "204.1.2.5", "204.1.2.4"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/mac_address_list"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/mac_address_list:

      .. rst-class:: ansible-option-title

      **mac_address_list**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/mac_address_list" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies list of MAC addresses of the devices for which configuration backups are to be taken.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/serial_number_list"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/serial_number_list:

      .. rst-class:: ansible-option-title

      **serial_number_list**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/serial_number_list" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the list of serial numbers of the devices for which configuration backups need to be taken.

      For example - ["FCW2225C020", "FJB2334D06N", "FJC2327U0S2", "FJC2721271T"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/series"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/series:

      .. rst-class:: ansible-option-title

      **series**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/series" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the list of series of the device(s) for a specific device type for which configuration backups need to be taken.

      For example - ["Cisco Catalyst 9300 Series Switches"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/site_list"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/site_list:

      .. rst-class:: ansible-option-title

      **site_list**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/site_list" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies a list of sites. The module takes a configuration backup of all devices located within the specified site(s).

      Each site should be represented as a string value that indicates the complete hierarchical path of the site.

      For example - ["Global/USA/San Francisco/Building\_2/floor\_1", "Global/USA/New York/Building\_3/floor\_2"]

      Note -  When additional parameters are provided along with \`site\_list\`, the operation will include all devices in the specified site(s) and any devices matching the additional criteria (excluding \`site\_list\`). In other words, the operation will be performed on devices within the site(s) and those that meet the additional criteria.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/type"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/type:

      .. rst-class:: ansible-option-title

      **type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the list of types of device(s) from a specific device family for which configuration backups need to be taken.

      For example - ["Cisco Catalyst 9300 Switch", "Cisco Catalyst 9500 Switch"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/unzip_backup"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config/unzip_backup:

      .. rst-class:: ansible-option-title

      **unzip_backup**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/unzip_backup" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Determines whether the downloaded backup file should be unzipped after download.

      If set to True, the backup file will be extracted to the specified directory.

      If set to False, the file will remain in its zipped state.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-config_verify:

      .. rst-class:: ansible-option-title

      **config_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Set to True to verify the Cisco Catalyst Center config after applying the playbook config.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-log"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-log:

      .. rst-class:: ansible-option-title

      **log**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-log" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable/disable playbook execution logging.

      When true and log\_file\_path is provided, - Create the log file at the execution location with the specified name.

      When true and log\_file\_path is not provided, - Create the log file at the execution location with the name 'catalystcenter.log'.

      When false, - Logging is disabled.

      If the log file doesn't exist, - It is created in append or write mode based on the "log\_append" flag.

      If the log file exists, - It is overwritten or appended based on the "log\_append" flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-log_append"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-log_append:

      .. rst-class:: ansible-option-title

      **log_append**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-log_append" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Determines the mode of the file. Set to True for 'append' mode. Set to False for 'write' mode.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-log_file_path"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-log_file_path:

      .. rst-class:: ansible-option-title

      **log_file_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-log_file_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Governs logging. Logs are recorded if log is True.

      If path is not specified, - When 'log\_append' is True, 'catalystcenter.log' is generated in the current Ansible directory; logs are appended. - When 'log\_append' is False, 'catalystcenter.log' is generated; logs are overwritten.

      If path is specified, - When 'log\_append' is True, the file opens in append mode. - When 'log\_append' is False, the file opens in write (w) mode. - In shared file scenarios, without append mode, content is overwritten after each module execution. - For a shared log file, set append to False for the 1st module (to overwrite); for subsequent modules, set append to True.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"catalystcenter.log"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-log_level"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-log_level:

      .. rst-class:: ansible-option-title

      **log_level**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-log_level" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sets the threshold for log level. Messages with a level equal to or higher than this will be logged. Levels are listed in order of severity [CRITICAL, ERROR, WARNING, INFO, DEBUG].

      CRITICAL indicates serious errors halting the program. Displays only CRITICAL messages.

      ERROR indicates problems preventing a function. Displays ERROR and CRITICAL messages.

      WARNING indicates potential future issues. Displays WARNING, ERROR, CRITICAL messages.

      INFO tracks normal operation. Displays INFO, WARNING, ERROR, CRITICAL messages.

      DEBUG provides detailed diagnostic info. Displays all log messages.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"WARNING"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The state of Cisco Catalyst Center after module completion.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`"merged"` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Methods used are sites.Sites.get\_site Site\_design.Site\_design.get\_sites sites.Sites.get\_membership site\_design.Site\_design.get\_site\_assigned\_network\_devices devices.Devices.get\_device\_list devices.Devices.get\_device\_by\_id configuration\_archive.ConfigurationsArchive.export\_device\_configurations file.Files.download\_a\_file\_by\_fileid
   - Paths used are get /dna/intent/api/v1/site get /dna/intent/api/v1/membership/${siteId} get /dna/intent/api/v1/network-device post /dna/intent/api/v1/network-device-archive/cleartext get /dna/intent/api/v1/file/${fileId} get /dna/intent/api/v1/networkDevices/assignedToSite get /dna/intent/api/v1/sites get /dna/intent/api/v1/network-device/${id}
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins instead embedded connection manager from Cisco Catalyst Center SDK
   - The parameters starting with catalystCenter\_ are used by the Cisco Catalyst Center Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Take backup of all devices in the Cisco Catalyst Center
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - file_password: qsaA12!asdasd
    - name: Take backup of device(s) using hostname(s)
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - hostname_list: ["DC-T-9300.cisco.local", "NY-BN-9300.cisco.local"]
            file_path: backup
            unzip_backup: false
    - name: Take backup of device(s) using hostname(s) and provide file password
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - hostname_list: ["DC-T-9300.cisco.local"]
            file_path: backup
            file_password: qsaA12!asdasd
            unzip_backup: true
    - name: Take backup of all devices in a site(s)
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - site_list: ["Global/USA/RTP/BLD10", "Global/USA/New York/BLDNYC/FLOOR1"]
            file_path: backup
    - name: Take backup of device(s) using IP Address List
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - ip_address_list: ["204.1.2.5", "204.1.2.4", "204.1.2.2"]
            file_path: backup
    - name: Take backup of device(s) using MAC Address List
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - mac_address_list: ["d4:ad:bd:c1:67:00", " 00:b6:70:32:b8:00", "0c:75:bd:42:c3:80", "90:88:55:07:59:00"]
            file_path: backup
            unzip_backup: false
    - name: Take backup of device(s) using Serial Number List
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - serial_number_list: ["FCW2225C020", "FJB2334D06N", "FJC2327U0S2", "FJC2721271T"]
            file_path: backup
    - name: Take backup of device(s) using Family List
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - family_list: ["Switches and Hubs", "Routers"]
            file_path: backup
            unzip_backup: true
    - name: Take backup of device(s) using Device Family Type List
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - type_list: ["Cisco Catalyst 9300 Switch"]
            file_path: backup
            unzip_backup: false
    - name: Take backup of device(s) using Device Series
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - series_list: ["Cisco Catalyst 9300 Series Switches"]
            file_path: backup
    - name: Take backup of devices with certain Collection Status
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - collection_status_list: ["Managed"]
            file_path: backup
    - name: Take backup of device(s) in a site and also that meet other parameters
      cisco.catalystcenter.device_configs_backup_workflow_manager:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        log: true
        log_level: "{{log_level}}"
        state: merged
        config:
          - site_list: ["Global"]
            family_list: ["Switches and Hubs"]
            series_list: ["Cisco Catalyst 9300 Series Switches"]
            ip_address_list: ["204.1.2.5"]
            file_path: backup
            unzip_backup: false




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_1"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__return-response_1:

      .. rst-class:: ansible-option-title

      **response_1**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_1" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary with  with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"{\\n  \\"response\\":\\n    {\\n      \\"response\\": String,\\n      \\"version\\": String\\n    },\\n  \\"msg\\": String\\n}\\n"`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_2"></div>

      .. _ansible_collections.cisco.catalystcenter.device_configs_backup_workflow_manager_module__return-response_2:

      .. rst-class:: ansible-option-title

      **response_2**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_2" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A string with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`["{\\n  \\"response\\": []", "\\n  \\"msg\\": String\\n}\\n"]`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Abinash Mishra (@abimishr) Rugvedi Kapse (@rukapse) Madhan Sankaranarayanan (@madhansansel) Sonali Deepthi Kesali (@skesali)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

